--- a/vps-deployment/.env.example
+++ b/vps-deployment/.env.example
@@ -8,11 +8,36 @@ VPS_USER=root
 GITHUB_USERNAME=your_github_username
 GITHUB_TOKEN=ghp_your_github_token_here
 
-# Hummingbot Configuration (optional)
-# Uncomment and configure if you want to set these via environment
-# CONFIG_PASSWORD=your_password_here
-# CONFIG_FILE_NAME=your_config.py
-# SCRIPT_CONFIG=your_script_config.yml
+# =================================================================
+# Hummingbot Configuration (REQUIRED)
+# =================================================================
+CONFIG_PASSWORD=your_secure_password_here
+
+# =================================================================
+# Hummingbot API Configuration (REQUIRED - for MCP integration)
+# =================================================================
+API_USERNAME=your_api_username
+API_PASSWORD=your_api_password
+
+# =================================================================
+# Database Configuration (REQUIRED)
+# =================================================================
+POSTGRES_PASSWORD=your_postgres_password
+
+# =================================================================
+# MQTT Broker Configuration (REQUIRED)
+# =================================================================
+BROKER_USERNAME=your_broker_username
+BROKER_PASSWORD=your_broker_password
+
+# =================================================================
+# Market Data Settings
+# =================================================================
+MARKET_DATA_CLEANUP_INTERVAL=300
+MARKET_DATA_FEED_TIMEOUT=600
+
+# Debug mode (set to true for verbose logging)
+DEBUG_MODE=false
 
 # Watchtower Settings
 # How often to check for updates (in seconds, default 3600 = 1 hour)
