--- a/vps-deployment/nginx/conf.d/default.conf
+++ b/vps-deployment/nginx/conf.d/default.conf
@@ -19,9 +19,36 @@ server {
         deny all;
     }
 
+    # Hummingbot API proxy for MCP integration
+    location /api/ {
+        proxy_pass http://hummingbot-api:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # CORS headers for API access
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
     # Default location - customize based on your needs
     location / {
-        return 200 "Hummingbot VPS Server\n";
+        return 200 "Hummingbot VPS Server\n\nAPI available at /api/\nAPI docs at /api/docs\n";
         add_header Content-Type text/plain;
     }
 }
