--- a/vps-deployment/nginx/conf.d/default.conf
+++ b/vps-deployment/nginx/conf.d/default.conf
@@ -1,4 +1,4 @@
-# Health check endpoint for Docker healthcheck
+# Health check endpoint for Docker healthcheck (default server)
 server {
     listen 80 default_server;
     server_name _;
@@ -19,9 +19,107 @@ server {
         deny all;
     }
 
-    # Hummingbot API proxy for MCP integration
+    # Default location for non-matching hosts
+    location / {
+        return 200 "Hummingbot VPS Server\n\nPlease use hummingbot.skillsavers.ai\n";
+        add_header Content-Type text/plain;
+    }
+}
+
+# HTTP server for hummingbot.skillsavers.ai - ACME challenge and redirect to HTTPS
+server {
+    listen 80;
+    server_name hummingbot.skillsavers.ai;
+
+    # ACME challenge for Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS server for hummingbot.skillsavers.ai
+server {
+    listen 443 ssl http2;
+    server_name hummingbot.skillsavers.ai;
+
+    # SSL certificates from Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/hummingbot.skillsavers.ai/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hummingbot.skillsavers.ai/privkey.pem;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # Hummingbot API proxy
     location /api/ {
         proxy_pass http://hummingbot-api:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+
+        # Timeouts for long-running API requests
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+
+        # CORS headers for API access
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With" always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
+    # Hummingbot Dashboard (Streamlit) proxy
+    location /dashboard {
+        proxy_pass http://dashboard:8501;
+        proxy_http_version 1.1;
+
+        # WebSocket support for Streamlit
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Streamlit-specific headers
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+
+        # Timeouts for streaming connections
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+
+        # Disable buffering for real-time updates
+        proxy_buffering off;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # EMQX Broker Dashboard proxy (optional - for monitoring)
+    location /broker/ {
+        proxy_pass http://emqx:18083/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -35,21 +133,11 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-
-        # CORS headers for API access
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
     }
 
-    # Default location - customize based on your needs
+    # Root location - redirect to dashboard
     location / {
-        return 200 "Hummingbot VPS Server\n\nAPI available at /api/\nAPI docs at /api/docs\n";
-        add_header Content-Type text/plain;
+        return 301 https://$host/dashboard;
     }
 }
 
