--- a/vps-deployment/docker-compose.yml
+++ b/vps-deployment/docker-compose.yml
@@ -142,7 +142,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./data/certbot/conf:/etc/letsencrypt:ro
+      - ./data/certbot/www:/var/www/certbot:ro
       - ./data/nginx/cache:/var/cache/nginx
       - ./data/nginx/logs:/var/log/nginx
     logging:
@@ -161,6 +162,16 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - hummingbot-network
 
   # Optional: Add watchtower for automatic updates
   watchtower:
