fix: add CORS headers to dashboard for iframe embedding
- Add Access-Control-Allow-Origin header to allow embedding in iframes
- Add support for preflight OPTIONS requests
- Enables dashboard to be embedded in split-screen-chat-app at army.skillsavers.ai/hubert

--- a/vps-deployment/nginx/conf.d/default.conf
+++ b/vps-deployment/nginx/conf.d/default.conf
@@ -115,6 +115,17 @@ server {
         # Disable buffering for real-time updates
         proxy_buffering off;
         proxy_cache_bypass $http_upgrade;
+
+        # CORS headers for iframe embedding
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With, Accept, Origin" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+
+        # Handle OPTIONS preflight requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # EMQX Broker Dashboard proxy (optional - for monitoring)
